[package]
name = "cychron-tauri-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Performance", "Window"] }
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
once_cell = "1.19"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js",                # For WebAssembly
]

[workspace]
members = ["src-tauri"]
